--- a/app/src/main/res/layout/activity_image_display.xml
+++ b/app/src/main/res/layout/activity_image_display.xml
@@ -12,7 +12,7 @@
         android:layout_alignParentStart="true"
         android:layout_alignParentBottom="true"
         android:layout_alignParentEnd="true"
-        android:scaleType="fitXY"
+        android:scaleType="center"
         android:maxWidth="600dp"
         android:adjustViewBounds="true"
         android:contentDescription="Full Image" />
