--- a/app/src/main/res/layout/item_image_result.xml
+++ b/app/src/main/res/layout/item_image_result.xml
@@ -1,20 +1,30 @@
 <?xml version="1.0" encoding="utf-8"?>
 <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
-    android:layout_width="match_parent" android:layout_height="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent"
+    android:orientation="vertical"
+    android:weightSum="1">
 
     <ImageView
-        android:layout_width="75dp"
-        android:layout_height="75dp"
-        android:contentDescription="Image Result"
         android:id="@+id/ivImage"
-        android:scaleType="fitXY"
-        android:adjustViewBounds="true" />
+        android:layout_width="226dp"
+        android:layout_height="177dp"
+        android:adjustViewBounds="true"
+        android:contentDescription="Image Result"
+        android:fadingEdge="vertical"
+        android:padding="10dp"
+        android:paddingBottom="10dp"
+        android:paddingLeft="10dp"
+        android:paddingRight="10dp"
+        android:paddingTop="10dp"
+        android:scaleType="fitXY" />
 
     <TextView
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Image Title"
         android:id="@+id/tvTitle"
+        android:layout_width="226dp"
+        android:layout_height="60dp"
+        android:ellipsize="end"
         android:maxLines="2"
-        android:ellipsize="end" />
+        android:text="Image Title" />
+
 </LinearLayout>
